objects/GEMS_BP_Category_Association__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Profile__c</fullName>
        <label>Billing Profile</label>
        <referenceTo>GEMS_Billing_Profile__c</referenceTo>
        <relationshipLabel>GEMS Category Associations</relationshipLabel>
        <relationshipName>BA_BP_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>BP Associations</relationshipLabel>
        <relationshipName>BP_Category_Associations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>GEMS_Category__c</referenceTo>
        <relationshipLabel>GEMS Billing Profile Associations</relationshipLabel>
        <relationshipName>Category_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS BP Category Association</label>
    <nameField>
        <label>BP Category Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS BP Category Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>